package structure.adapterPattern.objectAdapter;

public class HDMI {

    byte[] output() {
        return new byte[] {65, 66, 67, 68, 69};
    }

}
