package structure.adapterPattern.objectAdapter;

public interface VGA {

    String output();

}
